Change Color of navbar Add Routes

--- a/src/styles/util.module.scss
+++ b/src/styles/util.module.scss
@@ -6,6 +6,6 @@ $light-grey-color: #e5e9f0;
 $white-color: #eceff4;
 $green-color: #a3be8c;
 $dark-green-color: #8fbcbb;
-$red-color: #bf616a;
+$red-color: #ef616a;
 $blue-color: #5e81ac;
 $light-blue-color: #88c0d0;
