--- a/src/styles/navbar/navbar.module.scss
+++ b/src/styles/navbar/navbar.module.scss
@@ -27,12 +27,12 @@
 }
 
 .logo i:hover {
-  color: $light-blue-color;
+  color: $red-color;
   transform: scale(1.3);
 }
 
 .logo .activeLogo {
-  color: $light-blue-color;
+  color: $red-color;
   transform: scale(1.3);
 }
 
@@ -77,7 +77,7 @@
 .socialBtn:hover > i {
   color: $primary-dark-color;
   transform: rotate(360deg);
-  font-size: 1.3rem;
+  font-size: 1.7rem;
 }
 
 .socialBtn:hover.socialBtn:before {
