--- a/src/styles/util.module.scss
+++ b/src/styles/util.module.scss
@@ -1,4 +1,4 @@
-$primary-color: #495057;
+$primary-color: #8d8d8d;
 $primary-dark-color: #191919;
 $black-color: #222;
 $primary-light-color: #d8dee9;
